# cyclone-net

./: .env.template  .gitattributes  .gitignore  BENCHMARK.md  CITATION.cff  ERRATA.md  LICENSE  LICENSE-DATA  MANUSCRIPT_V3.md  MANUSCRIPT_honest.md  README.md  config-template.yaml  cyclonenet_honest.tex  mcp_server.py  pipeline.py  pyproject.toml  requirements.txt  run.py
analysis/: apply_dv24_label_correction.py  audit_core_integrity.py  augment_event_list_dv.py  calibration_report.py  causal_tests.py  dv24_impact_assessment.py  dv24_impact_assessment_v2.py  dv24_impact_assessment_v3.py  dv24_impact_assessment_v4.py  dv24_impact_assessment_v5_raw_reference.py  feature_ablation_cnn.py  feature_ablation_kfold.py  fuelmap_ablation_cnn.py  fuelmap_displacement_dynamics.py  fuelmap_tchp_validation.py  package_dataset_release.py  pl_gate_census.py  plot_case_studies.py  rebuild_derived_channels.py  rebuild_diagnostics_only.py  rebuild_wind_channel.py  repair_basin_metadata.py  repair_interim_dataset.py  ri_precursors.py  ri_precursors_h1_control.py  tabular_baseline_kfold.py  validate_env_panel.py  verify_interim_integrity.py
docs/: CASE_STUDIES.md  CITATION.md  DATASET.md  INDEX.md  INTERPRETATION.md  PROJECT_STATE.md  ablation_preregistration.md  ablation_progress.md  cyclonenet_v3_preprint.tex  data_descriptor_draft.md  data_dictionary_v2_skeleton.md  dataset_release_plan.md  diagnostic.md  dv24_label_correction_design.md  fuelmap_ablation_preregistration.md  fuelmap_validation.md  hypothesis_registry.md  literature_review.md  manuscript_v3_skeleton.md  ri_precursors.md  (+2 more)
(+1841 files in other folders)
