[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclonenet"
version = "2.0.0"
description = "Reproducible pipeline for forensic analysis of tropical-cyclone rapid intensification (research code; dataset under CC BY 4.0, see LICENSE-DATA)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  # code license; the dataset is CC BY 4.0 (LICENSE-DATA)
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
